--- a/recipes/bananaBread.html
+++ b/recipes/bananaBread.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <a href="../index.html"> Home </a>
     <h1> Banana Bread </h1>
-    <img src = "https://www.simplyrecipes.com/thmb/n0haOVlgXcM8Sr53p3C-U53YP2U=/4399x3299/smart/filters:no_upscale()/Simply-Recipes-Easy-Banana-Bread-LEAD-2-2-63dd39af009945d58f5bf4c2ae8d6070.jpg" height = 512 height = 512 alt = bananana bread at work doe>
+    <img src="https://www.simplyrecipes.com/thmb/n0haOVlgXcM8Sr53p3C-U53YP2U=/4399x3299/smart/filters:no_upscale()/Simply-Recipes-Easy-Banana-Bread-LEAD-2-2-63dd39af009945d58f5bf4c2ae8d6070.jpg"
+        height=512 height=512 alt=bananana bread at work doe>
     <h2> What is Banana Bread you may ask? </h2>
     <p>
-        Banana bread is a type of bread made from mashed bananas. It is often a moist, sweet, cake-like quick bread; however 
-        there are some banana bread recipes that are traditional-style raised breads.   
-    </p>         
+        Banana bread is a type of bread made from mashed bananas. It is often a moist, sweet, cake-like quick bread;
+        however
+        there are some banana bread recipes that are traditional-style raised breads.
+    </p>
     <h2> Recipe Description </h2>
     <p>
-        Moist and delicious banana bread recipe. Easy to make, no need for a mixer! Ripe bananas, butter, sugar, egg, vanilla, baking soda, and flour.
+        Moist and delicious banana bread recipe. Easy to make, no need for a mixer! Ripe bananas, butter, sugar, egg,
+        vanilla, baking soda, and flour.
     </p>
     <h2> Ingredients </h2>
-    <ul> 
+    <ul>
         <li> 2 to 3 medium (7" to 7-7/8" long) very ripe bananas, peeled (about 1 1/4 to 1 1/2 cups mashed) </li>
         <li> 1/3 cup (76g) butter, unsalted or salted, melted </li>
         <li> 1/2 teaspoon baking soda (not baking powder) </li>
@@ -33,11 +38,19 @@
     <h2> Steps </h2>
     <ol>
         <li> Preheat the oven to 350°F (175°C), and butter a 4 x 8-inch loaf pan. </li>
-        <li> In a mixing bowl, mash the ripe bananas with a fork until completely smooth. Stir the melted butter into the mashed bananas. </li>
+        <li> In a mixing bowl, mash the ripe bananas with a fork until completely smooth. Stir the melted butter into
+            the mashed bananas. </li>
         <li> Mix in the baking soda and salt. Stir in the sugar, beaten egg, and vanilla extract. Mix in the flour.</li>
-        <li> Pour the batter into your prepared loaf pan. Bake for 50 minutes to 1 hour at 350°F (175°C), or until a toothpick or wooden skewer inserted into the center comes out clean. A few dry crumbs are okay; streaks of wet batter are not. If the outside of the loaf is browned but the center is still wet, loosely tent the loaf with foil and continue baking until the loaf is fully baked..</li>
-        <li> Remove from oven and let cool in the pan for a few minutes. Then remove the banana bread from the pan and let cool completely before serving. Slice and serve. (A bread knife helps to make slices that aren't crumbly.)
+        <li> Pour the batter into your prepared loaf pan. Bake for 50 minutes to 1 hour at 350°F (175°C), or until a
+            toothpick or wooden skewer inserted into the center comes out clean. A few dry crumbs are okay; streaks of
+            wet batter are not. If the outside of the loaf is browned but the center is still wet, loosely tent the loaf
+            with foil and continue baking until the loaf is fully baked..</li>
+        <li> Remove from oven and let cool in the pan for a few minutes. Then remove the banana bread from the pan and
+            let cool completely before serving. Slice and serve. (A bread knife helps to make slices that aren't
+            crumbly.)
 
-            Wrapped well, the banana bread will keep at room temperature for 4 days. For longer storage, refrigerate the loaf up to 5 days, or freeze it. </li>
+            Wrapped well, the banana bread will keep at room temperature for 4 days. For longer storage, refrigerate the
+            loaf up to 5 days, or freeze it. </li>
 </body>
+
 </html>
