--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1> Odin Recipes </h1>
+    <ul>
+        <a href="recipes/bananaBread.html">Banana Bread</a> 
+        <br> 
+        <a href="https://www.youtube.com/watch?v=SW-BU6keEUw"> Mom's Spaghetti </a> 
+    </ul>
 </body>
+
 </html>
